<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@drawable/bg_gray_shape"
    android:orientation="vertical"
    android:padding="10dp" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="3dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tv_ati" />

            <TextView
                android:id="@+id/tvStartName_ati"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_selector"
                android:gravity="left|center_vertical"
                android:padding="3dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="2dp"
            android:padding="3dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tv2_ati" />

            <TextView
                android:id="@+id/tvEndName_ati"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_selector"
                android:gravity="left|center_vertical"
                android:padding="3dp" />
        </LinearLayout>

        <TextView
            android:text="@string/tv3_ati"
            android:textColor="#0000ff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="2dp"
            android:padding="5dp" />

        <LinearLayout
            android:id="@+id/llListView_ati"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
             >

            <include layout="@layout/listview_traffic_transfer" />
        </LinearLayout>

   

</LinearLayout>